# witty-actors

./: Cargo.toml  README.md
.github/: CI.yml
benches/: bench.rs
examples/: ping_actor.rs
src/: actor.rs  actor_context.rs  lib.rs  mailbox.rs  runtime.rs  scheduler.rs  spawn_builder.rs  supervisor.rs  tests.rs
src/quickwit_common/: metrics.rs  mod.rs  proto.rs
