[package]
    name          = "quickwit-actors"
    version       = "0.6.0"
    authors       = ["Quickwit, Inc. <hello@quickwit.io>"]
    edition       = "2021"
    license       = "MIT"
    description   = "Actor framework used in quickwit"
    repository    = "https://github.com/quickwit-oss/quickwit"
    homepage      = "https://quickwit.io/"
    documentation = "https://quickwit.io/docs/"

[dependencies]
    anyhow      = "1.0.71"
    async-trait = "0.1.68"
    flume       = "0.10.14"
    futures     = "0.3.28"
    serde       = { version = "1.0.163", features = ["derive"] }
    serde_json  = "1.0.96"
    thiserror   = "1.0.40"
    tokio       = { version = "1.28.2", features = ["sync", "rt", "time", "macros"] }
    tracing     = "0.1.37"

[dev-dependencies]
    criterion = "0.5.1"
    rand      = "0.8.5"


    # quickwit-common = { workspace = true }
    # quickwit-proto = { workspace = true }

[features]
    testsuite = []


[[bench]]
    name    = "bench"
    harness = false
