[package]
    name          = "witty-actors"
    version       = "0.6.0"
    authors       = ["Quickwit, Inc. <hello@quickwit.io>"]
    edition       = "2021"
    license       = "MIT"
    description   = "Fork of quickwit-actors, Actor framework used in quickwit"
    repository    = "https://github.com/valyagolev/witty-actors"
    homepage      = "https://docs.rs/witty-actors"
    documentation = "https://docs.rs/witty-actors"

[dependencies]
    anyhow      = "1"
    async-trait = "0.1"
    flume       = "0.10"
    futures     = "0.3"
    prometheus  = "0.13"
    serde       = { version = "1.0", features = ["derive"] }
    serde_json  = "1"
    thiserror   = "1"
    tokio       = { version = "1.28", features = ["sync", "rt", "time", "macros"] }
    tracing     = "0.1"
    rand        = "0.8"
    http        = "0.2"

[dev-dependencies]
    criterion = "0.5.1"


    # quickwit-common = { workspace = true }
    # quickwit-proto = { workspace = true }

[features]
    testsuite = []


[[bench]]
    name    = "bench"
    harness = false
