[package]
    name          = "witty-actors"
    version       = "0.6.0"
    authors       = ["Quickwit, Inc. <hello@quickwit.io>"]
    edition       = "2021"
    license       = "MIT"
    description   = "Fork of quickwit-actors, Actor framework used in quickwit"
    repository    = "https://github.com/valyagolev/witty-actors"
    homepage      = "https://docs.rs/witty-actors"
    documentation = "https://docs.rs/witty-actors"

[dependencies]
    anyhow      = "1"
    async-trait = "0.1"
    flume       = "0.10"
    futures     = "0.3"
    http        = "0.2"
    prometheus  = "0.13"
    rand        = "0.8"
    serde       = { version = "1.0", features = ["derive"] }
    serde_json  = "1"
    thiserror   = "1"
    tokio       = { version = "1.29", features = ["sync", "rt", "time", "macros"] }
    tracing     = "0.1"

[dev-dependencies]
    criterion = { version = "0.5.1", features = ["async_tokio"] }
    tokio = { version = "1.29", features = [
        "sync",
        "rt",
        "time",
        "macros",
        "rt-multi-thread",
    ] }

[features]
    testsuite = []

[[bench]]
    name    = "bench"
    harness = false
